feat: add linter command (#347)
* Add linter CLI command with validation rules and formatters

Introduce txtx lint command for validating runbooks against workspace
manifests. Includes support for multiple output formats (stylish, json,
github, csv) and configurable rules. Add basic unit and integration tests.

Note: Test infrastructure does not yet support multi-file runbook scenarios.

* Remove C4 architecture annotations

* Add linter documentation

* Add configuration section to linter docs

* Add lint test aliases

cargo test-lint-unit  # 84 linter unit tests
  cargo test-lint-int   # 42 integration tests
  cargo test-lint-all   # All CLI tests (unit + integration)

* Rely on clap to document cli

Co-authored by: Micaiah Reid <micaiahreid@gmail.com>

* review comment: addons should be mutable!

* fix: collect to vec to avoid compile error

* fix: exclude txtx-addon-sp1 from test runs

* Remove enhanced_builder_example.rs

1. Move tests to crates/txtx-test-utils/src/builders/runbook_builder.rs:
  - test_builder_state_management
  - test_value_formatting
  - test_multi_file_support
  - test_manifest_generation
2. Remove crates/txtx-test-utils/examples/ folder
3. Remove references from cargo aliases and txtx-test-utils/README.md

* fix warnings

* Clean up more dead code warnings in lint module

- Remove unused CliRuleIdentifier enum & impl.
- Add #[allow(dead_code)] for options() method and ValidationContext fields.

---------

Co-authored-by: MicaiahReid <micaiahreid@gmail.com>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,7 +4,9 @@ test-validation-core = "test --no-default-features --package txtx-core --lib val
 test-validation-utils = "test --no-default-features --package txtx-test-utils"
 test-validation-all = "test --no-default-features --lib --tests --package txtx-core --package txtx-test-utils"
 
-run-builder-example = "run --example enhanced_builder_example --package txtx-test-utils"
+test-lint-unit = "test --package txtx-cli --bin txtx --no-default-features --features cli cli::lint::"
+test-lint-int = "test --package txtx-cli --test linter_tests_builder --no-default-features --features cli"
+test-lint-all = "test --package txtx-cli --no-default-features --features cli"
 
 [build]
 rustflags = ["--cfg", "tokio_unstable"]
