feat(evm): add keystore signer for Foundry-compatible encrypted keystores
Add evm::keystore signer that allows signing transactions using
Foundry-compatible encrypted keystore files. The password is prompted
interactively at runtime for security.

Features:
- Support keystore account name from default directory (~/.foundry/keystores)
- Support custom keystore directory via keystore_path input
- Support absolute paths to keystore files
- Interactive password prompt via ProvideInputRequest action
- Compatible with keystores created via `cast wallet import`

Usage:
```hcl
signer "deployer" "evm::keystore" {
    keystore_account = "my-deployer"
    keystore_path = "./keystores"  // optional
}
```

Add ProvideInput response handling in SignerInstance::check_activability
to enable signers to receive user-provided input values.

--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -38,7 +38,9 @@ alloy-chains = "0.2.14"
 alloy-primitives = { version = "1.4.1" }
 alloy-provider = { version = "1.0.41", default-features = false, features = ["debug-api"] }
 alloy-rpc-types = { version = "1.0.41", features = ["trace"] }
-alloy-signer-local = { version = "1.0.41", features = ["mnemonic"] }
+alloy-signer-local = { version = "1.0.41", features = ["mnemonic", "keystore"] }
+eth-keystore = "0.5.0"
+dirs = "5.0"
 thiserror = "1.0.62"
 toml = "0.5"
 foundry-block-explorers = "0.22.0"
