test(evm): add unit tests for keystore signer and shared code
Add unit tests for:
- resolve_keystore_path: path resolution, .json extension, default dirs
- keystore_to_secret_key_signer: decrypt, error handling, roundtrip
- mnemonic_to_secret_key_signer: valid/invalid mnemonics, derivation paths
- NonceManager: serialization, state management
- activate_signer: success and missing address cases
- check_signability: review modes, approval state, missing chain_id

Security test verifies keystore cannot be decrypted without password.

Add tempfile and rand as dev-dependencies for test fixtures.

--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -55,6 +55,10 @@ wasm = [
   "txtx-addon-kit/wasm",
 ]
 
+[dev-dependencies]
+tempfile = "3"
+rand = "0.8"
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
