--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -11,6 +11,8 @@ categories = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bip32 = {version = "0.5.3", features = ["alloc"] }
+ed25519-dalek-bip32 = "0.3.0"
 hcl-edit = "0.8.0"
 serde = "1"
 serde_derive = "1"
@@ -34,7 +36,6 @@ wasm-bindgen = { version = "0.2.93", optional = true }
 wasm-bindgen-futures = { version = "0.4.41", optional = true }
 hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
-tiny-hderive = { version = "0.3.0" }
 libsecp256k1 = { version = "0.7.0" }
 keccak-hash = "0.11.0"
 dirs = "5.0.1"
