--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [alias]
-txtx-install = "install --path crates/txtx-cli --features supervisor_ui --features ovm --locked --force"
+txtx-install = "install --path crates/txtx-cli --features supervisor_ui --locked --force"
 test-validation-core = "test --no-default-features --package txtx-core --lib validation::hcl_validator::tests"
 test-validation-utils = "test --no-default-features --package txtx-test-utils"
 test-validation-all = "test --no-default-features --lib --tests --package txtx-core --package txtx-test-utils"
