--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -10,6 +10,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  license_check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v2
+        with:
+          command: check licenses
+
   wasm_build:
     name: Build Project for WASM target
     runs-on: ubuntu-latest
