--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -28,10 +28,6 @@ jobs:
 
       - name: Build .env file
         uses: ./.github/actions/setup_env
-        with:
-          infura_api_key: ${{ secrets.INFURA_API_KEY }}
-          nhost_region: ${{ secrets.NHOST_REGION }}
-          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
 
       - name: Install Rust toolchain
         run: |
@@ -69,9 +65,6 @@ jobs:
       - name: Build .env file
         uses: ./txtx/.github/actions/setup_env
         with:
-          infura_api_key: ${{ secrets.INFURA_API_KEY }}
-          nhost_region: ${{ secrets.NHOST_REGION }}
-          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
           working_directory: "txtx"
           
       - name: Checkout Supervisor UI
@@ -81,18 +74,10 @@ jobs:
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
           path: txtx-supervisor-ui 
 
-      - name: Build .env file for Supervisor UI
-        uses: ./txtx/.github/actions/setup_supervisor_env
-        with:
-          txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
-          nhost_region: ${{ secrets.NHOST_REGION }}
-          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
-          working_directory: "txtx-supervisor-ui"
-
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
-          npm run i
+          npm run ci
           npm run build
           cd ..
 
