--- a/crates/txtx-cloud/Cargo.toml
+++ b/crates/txtx-cloud/Cargo.toml
@@ -12,14 +12,12 @@ categories = { workspace = true }
 [dependencies]
 txtx-addon-kit = { workspace = true }
 txtx-core = { workspace = true }
-txtx-gql = { workspace = true }
 actix-cors = "0.7.0"
 actix-web = "4"
 ansi_term = "0.12.1"
 atty = "0.2.14"
 base64 = "0.22.1"
 clap = { version = "4.4.6", features = ["derive"], optional = true }
-clap_generate = { version = "3.0.3", optional = true }
 dialoguer = "0.11.0"
 dirs = "5.0.1"
 graphql_client = "0.14.0"
@@ -28,14 +26,13 @@ jsonwebtoken = "9.3.1"
 open = "5.3.1"
 serde = "1"
 serde_json = "1"
-serde_derive = "1"
 serde_urlencoded = "0.7.1"
 tokio = "1.37.0"
 toml = { version = "0.8.2", features = ["preserve_order"], optional = true }
 
 [features]
 default = ["cli"]
-cli = ["clap", "clap_generate", "toml", "hiro-system-kit/log"]
+cli = ["clap", "toml", "hiro-system-kit/log"]
 
 [lib]
 crate-type = ["lib", "cdylib"] 
