fix supervisor install scripts

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
-          npm run ci
+          npm ci
           npm run build
           cd ..
 
